--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -22,6 +22,11 @@
     padding-left: 0;
   }
   
+  .logo-image {
+    width: 160px; /* Adjust for desired size */
+    height: auto;
+  }
+  
   .sidebar-menu li {
     padding: 10px 20px;
     border-bottom: 1px solid #34495e;
